--- a/landing.html
+++ b/landing.html
@@ -148,7 +148,7 @@
 							<li> Standardised profiles allow you to get down to business </li>
 						</ul>
 					</div>
-					<div class="feature2"> <img src="img/mockup/window.png" alt="" /> </div>
+					<div class="feature2"> <img src="img/mockup/1-Search-Results-10984246.png" alt="" /> </div>
 				</div>
 			</div>
 			<!-- ### END - Features Section ### -->
@@ -184,29 +184,29 @@
 						<!-- ### Testimonials 1 ### -->
 						<div class="span4 testi">
 							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
-							<h6> Thoughtworks</h6>
+							<h6>Thoughtworks</h6>
 							<div><br><br></div>
 							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
-							<h6> Thoughtworks</h6>
-						</div> 
+							<h6>ANSTO</h6>
+						</div>
 						<!-- ### Testimonials 2 ### -->
 
 						<div class="span4 testi">
 							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
-							<h6> Telstra</h6>
+							<h6>Telstra</h6>
 							<div><br><br></div>
 							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
-							<h6> Telstra</h6>
-						</div> 
+							<h6>Teach For Australia</h6>
+						</div>
 
 						<!-- ### Testimonials 3 ### -->
 						<div class="span4 testi">
 							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
-							<h6> Orica</h6>
+							<h6>Orica</h6>
 							<div><br><br></div>
 							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
-							<h6> Orica</h6>
-						</div>  
+							<h6>Codicote</h6>
+						</div>
 
 					</div>
 				</div>
