--- a/landing.html
+++ b/landing.html
@@ -70,11 +70,11 @@
 					    <div class="slides">
 						    <div class="slides_container">
 
-							    <img    src="img/slider/3-Review-shortlist-10984250.png" alt="sld1"/>
+							    <img    src="img/slider/1.png" alt="sld1"/>
 
-							    <img   src="img/slider/2-Modal-profile-10984248.png"  alt="sld2" />
+							    <img   src="img/slider/2.png"  alt="sld2" />
 
-							    <img    src="img/slider/6-Interviews-completed-10984256.png"  alt="sld3" />
+							    <img    src="img/slider/3.png"  alt="sld3" />
 
 						    </div>
 					    </div><!-- ### END - Slider Ipad ### -->
@@ -148,7 +148,7 @@
 							<li> Standardised profiles allow you to get down to business </li>
 						</ul>
 					</div>
-					<div class="feature2"> <img src="img/mockup/1-Search-Results-10984246.png" alt="" /> </div>
+					<div class="feature2"> <img src="img/mockup/1.png" alt="" /> </div>
 				</div>
 			</div>
 			<!-- ### END - Features Section ### -->
