New screenshot images

--- a/landing.html
+++ b/landing.html
@@ -108,7 +108,7 @@
 						<!-- ###   Feature 1 ### -->
 						<div class="span4 featu">
 							<div class="icon"><img src="img/icons/features1.png" class="ft1" alt="" /></div>
-							<h6>1. Search for the best</h6>
+							<h6>1. New batch of candidates<br>each fortnight</h6>
 							<p>Access the top 5% candidates in IT and Engineering<br><br></p>
 							<div class="step"><p>Step 1</p></div>
 						</div>
@@ -164,10 +164,10 @@
 						<div id="tabs-1" class="gallery">
 							<ul  class="row-fluid">
 								<!-- ### First Gallery ### -->
-								<li class="span3"> <a href="img/screenshots/screen1-big.jpg" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/screen1.jpg" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
-								<li class="span3"> <a href="img/screenshots/screen2-big.jpg" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/screen2.jpg" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
-								<li class="span3"> <a href="img/screenshots/screen3-big.jpg" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/screen3.jpg" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
-								<li class="span3"> <a href="img/screenshots/screen4-big.jpg" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/screen4.jpg" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
+								<li class="span3"> <a href="img/screenshots/1-big.png" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/1.png" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
+								<li class="span3"> <a href="img/screenshots/2-big.png" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/2.png" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
+								<li class="span3"> <a href="img/screenshots/3-big.png" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/3.png" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
+								<li class="span3"> <a href="img/screenshots/4-big.png" class="lightbox-go" title="My Screenshot"><img src="img/screenshots/4.png" class="a" alt=""/> <img src="img/screenshots/hover.png" class="b" alt=""/></a></li>
 							</ul>
 						</div>
 					</div>
