--- a/landing.html
+++ b/landing.html
@@ -116,7 +116,7 @@
 						<!-- ###   Feature 2 ### -->
 						<div class="span4 featu">
 							<div class="icon"><img src="img/icons/features2.png" class="ft1" alt="" /></div>
-							<h6>2. Make conditional offers</h6>
+							<h6>2. Make conditional offers<br><br></h6>
 							<p>Offer interviews to the candidates matched with you<br><br></p>
 							<div class="step"><p>Step 2</p></div>
 						</div>
@@ -124,7 +124,7 @@
 						<!-- ###   Feature 2 ### -->
 						<div class="span4 featu">
 							<div class="icon"><img src="img/icons/features3.png" class="ft1" alt="" /></div>
-							<h6> 3. Interview and hire</h6>
+							<h6> 3. Interview and hire<br><br></h6>
 							<p>  Interview candidates and make a formal offer to your future employee</p>
 							<div class="step"><p>Step 3</p></div>
 						</div>
@@ -183,28 +183,28 @@
 
 						<!-- ### Testimonials 1 ### -->
 						<div class="span4 testi">
-							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
+							<div class="client"><img src="img/testimonials/thoughtworks.png" class="ft1" alt="" /></div>
 							<h6>Thoughtworks</h6>
 							<div><br><br></div>
-							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
+							<div class="client"><img src="img/testimonials/ansto.png" class="ft1" alt="" /></div>
 							<h6>ANSTO</h6>
 						</div>
 						<!-- ### Testimonials 2 ### -->
 
 						<div class="span4 testi">
-							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
+							<div class="client"><img src="img/testimonials/telstra.png" class="ft1" alt="" /></div>
 							<h6>Telstra</h6>
 							<div><br><br></div>
-							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
+							<div class="client"><img src="img/testimonials/tfa.png" class="ft1" alt="" /></div>
 							<h6>Teach For Australia</h6>
 						</div>
 
 						<!-- ### Testimonials 3 ### -->
 						<div class="span4 testi">
-							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
+							<div class="client"><img src="img/testimonials/orica.png" class="ft1" alt="" /></div>
 							<h6>Orica</h6>
 							<div><br><br></div>
-							<div class="client"><img src="img/testimonials/client1.png" class="ft1" alt="" /></div>
+							<div class="client"><img src="img/testimonials/codicote.png" class="ft1" alt="" /></div>
 							<h6>Codicote</h6>
 						</div>
 
